# 585_Probabilistic_Robotics

.devcontainer/: devcontainer.json
homework1/: implementation_plan.md
homework1/homework1_ball_tracker/: CMakeLists.txt  README.md  package.xml
homework1/homework1_ball_tracker-1/: package.xml
homework1/homework1_ball_tracker-1/launch/: camera_robot_checker.launch.py  robot_tracker_rviz.launch.py
homework1/homework1_ball_tracker/config/: params.yaml
homework1/homework1_ball_tracker/launch/: camera_robot_checker.launch.py
homework1/homework1_ball_tracker/resource/: homework1_ball_tracker
homework1/homework1_ball_tracker/rviz/: camera_tracker.rviz
homework1/homework1_ball_tracker/src/: camera_tracker_node.cpp  green_follower_node.cpp
homework1/homework1_launcher/: CMakeLists.txt  package.xml
homework1/homework1_launcher/config/: diff_drive.yaml
homework1/homework1_launcher/hooks/: homework1_launcher.dsv
homework1/homework1_launcher/launch/: diff_drive.launch.py  diff_drive.launch.xml
homework1/homework1_launcher/launch/reference_launchers/: diff_drive.launch.xml
homework1/homework1_launcher/models/vehicle_blue/: model.config  model.sdf
homework1/homework1_launcher/models/vehicle_blue/vehicle/: model.sdf
homework1/homework1_launcher/models/vehicle_green/: model.config  model.sdf
homework1/homework1_launcher/resource/: homework1_launcher
homework1/homework1_launcher/worlds/: diff_drive_hw1.sdf  vehicle.sdf
homework1/ros_gz_sim/src/: ball_tracker_node.cpp
