<?xml version="1.0"?>
<package format="3">
  <name>homework1_ball_tracker</name>
  <version>0.0.1</version>
  <description>Camera-based robot tracker and follower</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>
  <exec_depend>image_view</exec_depend>
  <export/>
</package>