<package format="3">
  <name>homework1_launcher</name>
  <version>0.0.0</version>
  <description>EE585 HW1 diff-drive demo launcher and assets</description>
  <maintainer email="cagdas96vkp@gmail.com">cagopalin2</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
