<?xml version="1.0"?>
<package format="3">
  <name>homework1_launcher</name>
  <version>0.0.1</version>
  <description>EE585 HW1 diff-drive demo launcher and assets</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <!-- Helps classic Gazebo; harmless for GZ Sim -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
